--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 export WEB3_INFURA_PROJECT_ID=32d300de0a1443979a3a26ee0b2aaa39
-export PRIVATE_KEY={you_privateKey}
+export PRIVATE_KEY={your_privateKey}
